login/signup form

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,10 +42,10 @@
         <%=error%>
     </div>
     <%}%>
-    <%if(1) {%>
-    <div class="alert alert-success" role="alert">
-        <%%>
-    </div>
+    <!--<%if(1) {%>-->
+    <!--<div class="alert alert-success" role="alert">-->
+        <!--<%%>-->
+    <!--</div>-->
     <%}%>
 </div>
 <div class="container">
