--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,53 @@
+* {
+    font-family: Arial, sans-serif;
+}
+
+
 body {
-  padding: 50px;
+  /* padding: 25px; */
+  margin: 0;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #000000;
+  text-decoration: none;
+}
+
+nav {
+    display: block;
+    position: relative;
+
+    background-color: #00394f;
+    line-height: 40px;
+}
+
+.container {
+    margin-left: 20px;
+
+}
+
+
+.navbar-header {
+    display: inline;
+    position: relative;
+    /* height: 40px; */
+    font-size: 18px;
+
+
+    left: 10px;
+}
+
+.navbar-brand {
+    display: inline;
+    color: #ffffff;
+}
+
+.navbar-box {
+    display: inline-block;
+
+    width: 14px;
+    height: 14px;
+    background-color: #ffffff;
 }
