--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,16 @@
 <% include ./partials/header %>
-    <p>Welcome to <%= title %></p>
+<link rel='stylesheet' href="/stylesheets/index.css" />
+
+    <div class="usr">
+        <% if(1){ %>
+        <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
+        <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
+        <% } else { %>
+        <li><a href="#">Signed In As <%=  %></a></li>
+        <li><a href="/logout">Logout</a></li>
+        <% } %>
+    </div>
+
+    <div class="pub"></div>
+
 <% include ./partials/footer %>
