--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,29 @@
 <link rel='stylesheet' href="/stylesheets/index.css" />
 
     <div class="usr">
-        <% if(1){ %>
-        <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
-        <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
-        <% } else { %>
-        <li><a href="#">Signed In As <%=  %></a></li>
-        <li><a href="/logout">Logout</a></li>
-        <% } %>
+        <div class="usr-wrapper">
+
+            <div class="usr-header"> Personal <br> Budget <br> List </div>
+
+            <div class="usr-login-wrapper">
+                <div class="usr-login">
+                    <% if(1){ %>
+                    <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>">
+                        <a href="/login">Sign In</a>
+                    </li>
+                    <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>">
+                        <a href="/register">Sign Up</a>
+                    </li>
+
+                    <% } else { %>
+                    <li><a href="#">Signed In As <%=  %></a></li>
+                    <li><a href="/logout">Logout</a></li>
+                    <% } %>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
     <div class="pub"></div>
