--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,5 @@
 .usr {
-    position: absolute;
+    position: fixed;
     display: block;
     /* left: 0; */
     top: 40px;
@@ -7,19 +7,69 @@
     width: 40%;
     height: 100%;
 
-    background-color: black;
+    /* background-color: #eeeeee; */
+
+}
+
+.usr-wrapper {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+
+}
+
+.usr-header {
+    position: relative;
+    display: inline-block;
+    margin-top: 200px;
+    /* margin-left: 20px; */
+
+    color: #00394f;
+    font-size: 40px;
+    font-weight: 600;
+    text-align: left;
+
+    line-height: 50px;
+
+}
+
+.usr-login-wrapper {
+    position: relative;
+    text-align: left;
+    left: -40px;
+}
+
+.usr-login {
+    position: relative;
+    display: block;
+    margin-top: 40px;
+}
+
+.usr-login a {
+    color: #0076a3;
+    font-size: 25px;
+    line-height: 30px;
+}
+
+.usr-login li {
+    margin: 20px auto 20px auto;
+    display: block;
+    width: 100px;
+    height: 30px;
+
+    /* box-shadow: 0px 0px 5px #0076a7; */
 
 }
 
 
 .pub {
-    position: absolute;
+    position: fixed;
     display: block;
     /* left: 0; */
     top: 40px;
     right: 0;
 
-    background-color: blue;
+    background-color: #bbbbbb;
 
     width: 60%;
     height: 100%;
