--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button> -->
-            <a class="navbar-brand" href="/">Finance Checklist</a>
+            <a class="navbar-brand" href="/">Finance Checklist for Students</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <!--<ul class="nav navbar-nav">-->
