--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -66,11 +66,34 @@
     position: fixed;
     display: block;
     /* left: 0; */
-    top: 40px;
+    top: 50px;
     right: 0;
 
-    background-color: #bbbbbb;
+    background-color: #f4f4f4;
 
     width: 60%;
     height: 100%;
+}
+
+
+.pub-wrapper {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+
+}
+
+.pub-header {
+    position: relative;
+    display: inline-block;
+    margin-top: 200px;
+    /* margin-left: 20px; */
+
+    color: #00394f;
+    font-size: 40px;
+    font-weight: 600;
+    text-align: left;
+
+    line-height: 50px;
+
 }
