--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,11 +20,11 @@ nav {
     position: relative;
 
     background-color: #00394f;
-    line-height: 40px;
+    line-height: 50px;
 }
 
 .container {
-    margin-left: 20px;
+    margin-left: 30px;
 
 }
 
@@ -33,9 +33,6 @@ nav {
     display: inline;
     position: relative;
     /* height: 40px; */
-
-
-
     left: 10px;
 }
 
@@ -52,4 +49,14 @@ nav {
     width: 12px;
     height: 12px;
     background-color: #ffffff;
+}
+
+
+#navbar-date {
+    display: inline;
+    position: absolute;
+    right: 20px;
+
+    color: #ffffff;
+
 }
