--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,11 +22,16 @@
                     <% } %>
                 </div>
             </div>
-
         </div>
-
     </div>
 
-    <div class="pub"></div>
+    <div class="pub">
+        <div class="pub-wrapper">
+            <div class="pub-header"> Suggestion <br> for Income </div>
+
+
+
+        </div>
+    </div>
 
 <% include ./partials/footer %>
