--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,28 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+.left {
+  width: 30%;
+  //background-color: orangered;
+  //boarder-style: dotted;
+  border: 1px solid blue;
+  float:left;
+  margin: 1.66%;
+}
+
+.right {
+  width: 63%;
+  height: 90%;
+  //background-color: yellowgreen;
+  //boarder-style: dotted;
+  border: 1px solid blue;
+  float:right;
+  margin: 1.66%;
+}
 a {
   color: #00B7FF;
+}
+
+.box {
+  height: 500px;
 }
