--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,11 +37,11 @@
     </div>
 </nav>
 <div class="container">
-    <%if(0) {%>
-    <div class="alert alert-danger" role="alert">
-        <%=error%>
-    </div>
-    <%}%>
+    <!--<%if(0) {%>-->
+    <!--<div class="alert alert-danger" role="alert">-->
+        <!--<%=error%>-->
+    <!--</div>-->
+    <!--<%}%>-->
     <!--<%if(1) {%>-->
     <!--<div class="alert alert-success" role="alert">-->
         <!--<%%>-->
