Update personal budget part

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 
     <div class="pub">
         <div class="pub-wrapper">
-            <div class="pub-header"> Suggestion <br> for Income </div>
+            <div class="pub-header"> Income <br> Suggestion </div>
 
 
 
