--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -12,7 +12,7 @@
 }
 
 .usr-wrapper {
-    text-align: center;
+    /* text-align: center; */
     width: 100%;
     height: 100%;
 
@@ -21,8 +21,8 @@
 .usr-header {
     position: relative;
     display: inline-block;
-    margin-top: 200px;
-    /* margin-left: 20px; */
+    margin-top: 50px;
+    margin-left: 50px;
 
     color: #00394f;
     font-size: 40px;
@@ -35,8 +35,10 @@
 
 .usr-login-wrapper {
     position: relative;
-    text-align: left;
-    left: -40px;
+    display: block;
+    margin-top: 120px;
+
+    text-align: center;
 }
 
 .usr-login {
@@ -45,20 +47,26 @@
     margin-top: 40px;
 }
 
-.usr-login a {
-    color: #0076a3;
-    font-size: 25px;
-    line-height: 30px;
-}
+
 
 .usr-login li {
     margin: 20px auto 20px auto;
     display: block;
-    width: 100px;
-    height: 30px;
 
+    background-color: #0076a3;
+    /* align-items: center; */
+    /* text-align: center; */
+    width: 60%;
+    line-height: 32px;
+    border-radius: 5px;
     /* box-shadow: 0px 0px 5px #0076a7; */
 
+}
+
+.usr-login li a {
+    color: #ffffff;
+    font-size: 15px;
+    letter-spacing: 1px;
 }
 
 
@@ -77,7 +85,7 @@
 
 
 .pub-wrapper {
-    text-align: center;
+    /* text-align: center; */
     width: 100%;
     height: 100%;
 
@@ -86,7 +94,9 @@
 .pub-header {
     position: relative;
     display: inline-block;
-    margin-top: 200px;
+    margin-top: 50px;
+    margin-left: 50px;
+
     /* margin-left: 20px; */
 
     color: #00394f;
