--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,9 +29,31 @@
         <div class="pub-wrapper">
             <div class="pub-header"> Income <br> Suggestion </div>
 
-            
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                     <img src="/images/sign1.png" id="pub-main1">
+                     Job Opportunities
+                </div>
+                <div id="pub-bul-sub1">
+                    <img src="/images/sign2.png" id="pub-sub">
+                    Part-time Job <br>
+                    <img src="/images/sign2.png" id="pub-sub">
+                    Internship Opportunity
+                </div>
+            </div>
 
-
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                    <img src="/images/sign1.png" id="pub-main2">
+                    Scholarship Opportunities
+                </div>
+                <div id="pub-bul-sub2">
+                    <img src="/images/sign2.png" id="pub-sub">
+                    Major best-match <br>
+                    <img src="/images/sign2.png" id="pub-sub">
+                    Deadline approach
+                </div>
+            </div>
         </div>
     </div>
 
