--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -4,7 +4,7 @@
     /* left: 0; */
     top: 40px;
 
-    width: 40%;
+    width: 50%;
     height: 100%;
 
     /* background-color: #eeeeee; */
@@ -51,7 +51,7 @@
     margin: 20px auto 20px auto;
     display: block;
 
-    background-color: #0076a3;
+    background-color: #00648a;
     /* align-items: center; */
     /* text-align: center; */
     width: 60%;
@@ -77,7 +77,7 @@
 
     background-color: #fbfbfb;
 
-    width: 60%;
+    width: 50%;
     height: 100%;
 }
 
@@ -94,6 +94,7 @@
     display: inline-block;
     margin-top: 50px;
     margin-left: 50px;
+    margin-bottom: 70px;
 
     /* margin-left: 20px; */
 
@@ -109,7 +110,7 @@
 .pub-bul-wrapper {
     position: relative;
     display: block;
-    margin-top: 70px;
+    margin-top: 30px;
     margin-left: 120px;
 
     line-height: 40px;
@@ -144,7 +145,7 @@
     font-size: 18px;
 
     margin-left: 80px;
-    line-height: 35px;
+    line-height: 40px;
 }
 
 #pub-bul-sub1.active, #pub-bul-sub2.active {
