--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,9 +35,9 @@
                      Job Opportunities
                 </div>
                 <div id="pub-bul-sub1">
-                    <img src="/images/sign2.png" id="pub-sub">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
                     Part-time Job <br>
-                    <img src="/images/sign2.png" id="pub-sub">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
                     Internship Opportunity
                 </div>
             </div>
@@ -48,9 +48,9 @@
                     Scholarship Opportunities
                 </div>
                 <div id="pub-bul-sub2">
-                    <img src="/images/sign2.png" id="pub-sub">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
                     Major best-match <br>
-                    <img src="/images/sign2.png" id="pub-sub">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
                     Deadline approach
                 </div>
             </div>
