--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -110,8 +110,8 @@
 .pub-bul-wrapper {
     position: relative;
     display: block;
-    margin-top: 30px;
-    margin-left: 120px;
+    margin-top: 20px;
+    margin-left: 150px;
 
     line-height: 40px;
 }
@@ -127,6 +127,9 @@
     /* position: fixed; */
     max-width: 14px;
     max-height: 14px;
+
+    padding: 3px;
+    margin-right: 2px;
 }
 
 #pub-main1.rot, #pub-main2.rot {
