--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,21 +1,61 @@
 <% include ./partials/header %>
+<link rel='stylesheet' href="/stylesheets/index.css" />
+<link rel='stylesheet' href="/stylesheets/login.css" />
 
-<div class="row">
-    <h1 style="text-align: center">Login</h1>
-    <div style="width: 30%; margin: 25px auto;">
-        <form action="/login" method="post">
-            <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="username">
+    <div class="usr">
+        <div class="usr-wrapper">
+
+            <div class="usr-header">Login</div>
+                <div class="usr-login-form">
+                    <form action="/login" method="post">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="username" placeholder="username">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="password" name="password" placeholder="password">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-lg btn-primary btn-block">Login</button>
+                        </div>
+                    </form>
+
+                </div>
             </div>
-            <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="password">
-            </div>
-            <div class="form-group">
-                <button class="btn btn-lg btn-primary btn-block">Login</button>
-            </div>
-        </form>
-        <a href="/">Go Back</a>
+
+
+        </div>
     </div>
-</div>
+
+    <div class="pub">
+        <div class="pub-wrapper">
+            <div class="pub-header"> Income <br> Suggestion </div>
+
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                     <img src="/images/sign1.png" id="pub-main1">
+                     Job Opportunities
+                </div>
+                <div id="pub-bul-sub1">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Part-time Job <br>
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Internship Opportunity
+                </div>
+            </div>
+
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                    <img src="/images/sign1.png" id="pub-main2">
+                    Scholarship Opportunities
+                </div>
+                <div id="pub-bul-sub2">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Major best-match <br>
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Deadline approach
+                </div>
+            </div>
+        </div>
+    </div>
 
 <% include ./partials/footer %>
