--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,15 @@
                 <input class="form-control" type="password" name="password" placeholder="password">
             </div>
             <div class="form-group">
+                <input class="form-control" type="text" name="firstName" placeholder="first name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="lastName" placeholder="last name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="budget" placeholder="budget">
+            </div>
+            <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
             </div>
         </form>
