--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
                 <div class="usr-login">
                     <% if(1){ %>
                     <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>">
-                        <a href="/login">Sign In</a>
+                        <a href="/login">Log In</a>
                     </li>
                     <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>">
                         <a href="/register">Sign Up</a>
