--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,10 +14,14 @@
                         <div class="form-group">
                             <input class="form-control" type="password" name="password" placeholder="password">
                         </div>
-                        <div class="form-group">
-                            <button class="btn btn-lg btn-primary btn-block">Login</button>
+                        <div style="display:inline;">
+                            <a id="back" href="/">Go Back</a>
+                            <a class="form-group">
+                                <button class="btn btn-lg btn-primary btn-block">Login</button>
+                            </a>
                         </div>
                     </form>
+
 
                 </div>
             </div>
