--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -26,7 +26,7 @@
     width: 40%;
     line-height: 32px;
 
-    color: #ffffff;
+    color: #00648a;
     font-size: 12px;
     letter-spacing: 1px;
 
