--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,28 +1,70 @@
 <% include ./partials/header %>
-<div class="row">
-    <h1 style="text-align: center">Sign Up</h1>
-    <div style="width: 30%; margin: 25px auto;">
-        <form action="/register" method="post">
-            <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="username">
+<link rel='stylesheet' href="/stylesheets/index.css" />
+<link rel='stylesheet' href="/stylesheets/register.css" />
+
+    <div class="usr">
+        <div class="usr-wrapper">
+
+            <div class="usr-header">Sign Up</div>
+            <div class="usr-login-form">
+                <form action="/register" method="post">
+                    <a class="form-group">
+                        <input class="form-control" type="text" name="username" placeholder="username">
+                    </a>
+                    <a class="form-group">
+                        <input class="form-control" type="password" name="password" placeholder="password">
+                    </a>
+                    <a class="form-group">
+                        <input class="form-control" type="text" name="firstName" placeholder="first name">
+                    </a>
+                    <a class="form-group">
+                        <input class="form-control" type="text" name="lastName" placeholder="last name">
+                    </a>
+
+                    <div style="display:inline;">
+                        <a id="back" href="/">Go Back</a>
+                        <a class="form-group">
+                            <button class="btn btn-lg btn-primary btn-block">Login</button>
+                        </a>
+                    </div>
+                </form>
+
             </div>
-            <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="password">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="firstName" placeholder="first name">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="lastName" placeholder="last name">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="budget" placeholder="budget">
-            </div>
-            <div class="form-group">
-                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
-            </div>
-        </form>
-        <a href="/">Go Back</a>
+
+
+        </div>
     </div>
-</div>
+
+    <div class="pub">
+        <div class="pub-wrapper">
+            <div class="pub-header"> Income <br> Suggestion </div>
+
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                     <img src="/images/sign1.png" id="pub-main1">
+                     Job Opportunities
+                </div>
+                <div id="pub-bul-sub1">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Part-time Job <br>
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Internship Opportunity
+                </div>
+            </div>
+
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                    <img src="/images/sign1.png" id="pub-main2">
+                    Scholarship Opportunities
+                </div>
+                <div id="pub-bul-sub2">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Major best-match <br>
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    Deadline approach
+                </div>
+            </div>
+        </div>
+    </div>
+
 <% include ./partials/footer %>
