Finish personal budget

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,7 @@
                     <div style="display:inline;">
                         <a id="back" href="/">Go Back</a>
                         <a class="form-group">
-                            <button class="btn btn-lg btn-primary btn-block">Login</button>
+                            <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
                         </a>
                     </div>
                 </form>
