--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,40 +6,73 @@
         <div class="usr-wrapper">
             <!-- <%=user.username%> -->
             <div class="usr-header"> <%=user.firstName%>'s <br> Budget <br> List </div>
-            <div class="usr-bul-wrapper">
+            <!-- <div class="usr-bul-wrapper">
                 <div class="usr-bul-main">
                      <img src="/images/sign1.png" id="usr-main1">
                      Weekly Budget Goals
                 </div>
                 <div id="usr-bul-sub1">
-                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
                     Food & Drink <br>
-                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
                     Leisure <br>
                     Health <br>
                     Education <br>
                     Sports <br>
                     Transportation <br>
                 </div>
-            </div>
+            </div> -->
 
             <div class="usr-bul-wrapper">
                 <div class="usr-bul-main">
-                     <img src="/images/sign1.png" id="usr-main2" style="transform:rotate(-90deg);">
+                     <img src="/images/sign1.png" id="usr-main2">
                      Monthly Spending
                 </div>
+
                 <div id="usr-bul-sub2">
+                    <ul class="monthly">
+                        <li class="item">
+                            <span class="name">Food & Drink</span>
+                            <span class="progress">
+                                <span class="bar" style="width:90%;"></span>
+                                <a> 780/880 </a>
+                            </span>
+                        </li>
+
+                        <li class="item">
+                            <span class="name">Leisure</span>
+                            <span class="progress">
+                                <span class="bar" style="width:66%;"></span>
+                                <a> 610/900 </a>
+                            </span>
+                        </li>
+
+                        <li class="item">
+                            <span class="name">Health</span>
+                            <span class="progress">
+                                <span class="bar" style="width:50%; background-color: yellowgreen;"></span>
+                                <a> 150/300 </a>
+                            </span>
+                        </li>
+
+                        <li class="item">
+                            <span class="name">Education</span>
+                            <span class="progress">
+                                <span class="bar" style="width:101%; background-color: red;"></span>
+                                <a> 200/150</a>
+                            </span>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
 
-            <div class="usr-bul-wrapper">
+            <!-- <div class="usr-bul-wrapper">
                 <div class="usr-bul-main">
-                     <img src="/images/sign1.png" id="usr-main2" style="transform:rotate(-90deg);">
+                     <img src="/images/sign1.png" id="usr-main3">
                      Stock Information
                 </div>
-                <div id="usr-bul-sub2">
+                <div id="usr-bul-sub3">
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
