--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -24,6 +24,7 @@
     display: inline-block;
     margin-top: 50px;
     margin-left: 50px;
+    margin-bottom: 70px;
 
     color: #00394f;
     font-size: 40px;
