--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,7 +5,7 @@
     <div class="usr">
         <div class="usr-wrapper">
             <!-- <%=user.username%> -->
-            <div class="usr-header"> <%=user.firstName%>'s <br> Budget <br> List </div>
+            <div class="usr-header"> <%=user.firstName%>'s <br> Budget List </div>
             <!-- <div class="usr-bul-wrapper">
                 <div class="usr-bul-main">
                      <img src="/images/sign1.png" id="usr-main1">
