--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,35 @@
+    <div class="pub">
+        <div class="pub-wrapper">
+            <div class="pub-header"> Income <br> Suggestion </div>
 
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                     <img src="/images/sign1.png" id="pub-main1">
+                     Job Opportunities
+                </div>
+                <div id="pub-bul-sub1">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    <div class="pub-detail">Part-time Job </div>
+                    <a id="pub-bul-ss" href="https://www.glassdoor.com/job-listing/part-time-preschool-assistant-ny-kids-club-JV_IC1132348_KO0,29_KE30,42.htm?jl=2523692078&utm_campaign=google_jobs_apply&utm_source=google_jobs_apply&utm_medium=organic"> Part-Time Preschool Assistant </a>
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    <div class="pub-detail">Internship Opportunity</div>
+                    <a id="pub-bul-ss" href="https://careers.google.com/jobs#!t=jo&jid=/google/user-experience-writer-intern-summer-76-9th-ave-new-york-ny-10011-usa-2929190150&"> User Experience Writer Intern, Google</a>
+                </div>
+            </div>
+
+            <div class="pub-bul-wrapper">
+                <div class="pub-bul-main">
+                    <img src="/images/sign1.png" id="pub-main2">
+                    Scholarship Opportunity
+                </div>
+                <div id="pub-bul-sub2">
+                    <!-- <img src="/images/sign2.png" id="pub-sub"> -->
+                    <div class="pub-detail">Major best-match </div>
+                    <a id="pub-bul-ss" href="https://services.google.com/fb/forms/2018WTMSP-USCAN/"> 2018 Women Techmakers Scholars Program</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- jQuery CDN -->
     <script
@@ -12,6 +43,6 @@
             crossorigin="anonymous"></script>
 
     <script src="js/toggle.js"></script>
-    
+
 </body>
 </html>
