--- a/views/show.ejs
+++ b/views/show.ejs
@@ -48,7 +48,7 @@
                         <li class="item">
                             <span class="name">Health</span>
                             <span class="progress">
-                                <span class="bar" style="width:50%; background-color: yellowgreen;"></span>
+                                <span class="bar" style="width:50%; background-color: #0076A3;"></span>
                                 <a> 150/300 </a>
                             </span>
                         </li>
@@ -56,7 +56,7 @@
                         <li class="item">
                             <span class="name">Education</span>
                             <span class="progress">
-                                <span class="bar" style="width:101%; background-color: red;"></span>
+                                <span class="bar" style="width:101%; background-color: #B01233;"></span>
                                 <a> 200/150</a>
                             </span>
                         </li>
